z-index fixed

--- a/css/product.css
+++ b/css/product.css
@@ -82,7 +82,7 @@
     margin: auto;
     /* padding-top: 5%; */
     display: flex;
-    z-index: 999;
+    z-index: 999999999999;
     position: sticky;
     top: 10px;
     /* background-color: red; */
